@@ -1,8 +1,14 @@
 package com.gepardec.mega.zep.impl;
 
 import com.gepardec.mega.domain.model.*;
+import com.gepardec.mega.db.entity.common.PaymentMethodType;
+import com.gepardec.mega.domain.model.Bill;
+import com.gepardec.mega.domain.model.BillabilityPreset;
+import com.gepardec.mega.domain.model.Employee;
+import com.gepardec.mega.domain.model.Project;
 import com.gepardec.mega.domain.model.monthlyreport.ProjectEntry;
 import com.gepardec.mega.domain.utils.DateUtils;
+import com.gepardec.mega.service.api.MonthlyReportService;
 import com.gepardec.mega.service.mapper.EmployeeMapper;
 import com.gepardec.mega.zep.ZepService;
 import com.gepardec.mega.zep.ZepServiceException;
@@ -11,6 +17,41 @@ import com.gepardec.mega.zep.mapper.AbsenceTimeMapper;
 import com.gepardec.mega.zep.mapper.ProjectEntryMapper;
 import com.gepardec.mega.zep.mapper.ProjectTimeMapper;
 import de.provantis.zep.*;
+import de.provantis.zep.BelegListeType;
+import de.provantis.zep.BelegType;
+import de.provantis.zep.BelegbetragType;
+import de.provantis.zep.FehlzeitType;
+import de.provantis.zep.KategorieListeType;
+import de.provantis.zep.KategorieType;
+import de.provantis.zep.MitarbeiterType;
+import de.provantis.zep.ProjektListeType;
+import de.provantis.zep.ProjektMitarbeiterListeType;
+import de.provantis.zep.ProjektMitarbeiterType;
+import de.provantis.zep.ProjektNrListeType;
+import de.provantis.zep.ProjektType;
+import de.provantis.zep.ProjektzeitType;
+import de.provantis.zep.ReadBelegAnhangRequestType;
+import de.provantis.zep.ReadBelegAnhangResponseType;
+import de.provantis.zep.ReadBelegAnhangSearchCriteriaType;
+import de.provantis.zep.ReadBelegRequestType;
+import de.provantis.zep.ReadBelegResponseType;
+import de.provantis.zep.ReadBelegSearchCriteriaType;
+import de.provantis.zep.ReadFehlzeitRequestType;
+import de.provantis.zep.ReadFehlzeitResponseType;
+import de.provantis.zep.ReadFehlzeitSearchCriteriaType;
+import de.provantis.zep.ReadMitarbeiterRequestType;
+import de.provantis.zep.ReadMitarbeiterSearchCriteriaType;
+import de.provantis.zep.ReadProjekteRequestType;
+import de.provantis.zep.ReadProjekteResponseType;
+import de.provantis.zep.ReadProjekteSearchCriteriaType;
+import de.provantis.zep.ReadProjektzeitenRequestType;
+import de.provantis.zep.ReadProjektzeitenResponseType;
+import de.provantis.zep.ReadProjektzeitenSearchCriteriaType;
+import de.provantis.zep.ResponseHeaderType;
+import de.provantis.zep.UpdateMitarbeiterRequestType;
+import de.provantis.zep.UpdateMitarbeiterResponseType;
+import de.provantis.zep.UserIdListeType;
+import de.provantis.zep.ZepSoapPortType;
 import io.quarkus.cache.CacheInvalidate;
 import io.quarkus.cache.CacheResult;
 import jakarta.enterprise.context.RequestScoped;
@@ -72,13 +113,13 @@ public class ZepSoapServiceImpl implements ZepService {
         return getEmployeeInternal(readMitarbeiterSearchCriteriaType).stream().findFirst().orElse(null);
     }
 
-    
+    @CacheResult(cacheName = "employee")
     @Override
     public List<Employee> getEmployees() {
         return getEmployeeInternal(null);
     }
 
-    
+    @CacheInvalidate(cacheName = "employee")
     @Override
     public void updateEmployeesReleaseDate(final String userId, final String releaseDate) {
         logger.info("start update user {} with releaseDate {}", userId, releaseDate);
@@ -105,7 +146,7 @@ public class ZepSoapServiceImpl implements ZepService {
         }
     }
 
-    
+    @CacheResult(cacheName = "fehlzeitentype")
     @Override
     public List<AbsenceTime> getAbsenceForEmployee(Employee employee, LocalDate date) {
         final ReadFehlzeitRequestType fehlzeitenRequest = new ReadFehlzeitRequestType();
@@ -130,7 +171,7 @@ public class ZepSoapServiceImpl implements ZepService {
         return Collections.emptyList();
     }
 
-    
+    @CacheResult(cacheName = "projektzeittype")
     @Override
     public List<ProjectTime> getBillableForEmployee(Employee employee, LocalDate date) {
         ReadProjektzeitenResponseType readProjektzeitenResponseType = readProjektzeitenWithSearchCriteria(employee, date, this::createProjectTimeSearchCriteria);
@@ -146,7 +187,7 @@ public class ZepSoapServiceImpl implements ZepService {
     }
 
 
-    
+    @CacheResult(cacheName = "projectentry")
     @Override
     public List<ProjectEntry> getProjectTimes(Employee employee, LocalDate date) {
         ReadProjektzeitenResponseType projectTimeResponse = readProjektzeitenWithSearchCriteria(employee, date, this::createProjectTimeSearchCriteria);
@@ -155,10 +196,10 @@ public class ZepSoapServiceImpl implements ZepService {
                 .flatMap(projectTimes -> Optional.ofNullable(projectTimes.getProjektzeitListe()))
                 .stream()
                 .flatMap(projectTimes -> projectEntryMapper.mapList(projectTimes.getProjektzeiten()).stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    
+
     @Override
     public List<ProjectTime> getProjectTimesForEmployeePerProject(String projectID, LocalDate curDate) {
         ReadProjektzeitenResponseType readProjektzeitenResponseType = readProjektzeitenWithSearchCriteria(projectID, curDate, this::createProjectTimesForEmployeePerProjectSearchCriteria);
@@ -173,7 +214,7 @@ public class ZepSoapServiceImpl implements ZepService {
         return Collections.emptyList();
     }
 
-    
+    @CacheResult(cacheName = "project")
     @Override
     public List<Project> getProjectsForMonthYear(final LocalDate monthYear) {
         final ReadProjekteResponseType readProjekteResponseType = getProjectsInternal(monthYear);
@@ -181,8 +222,29 @@ public class ZepSoapServiceImpl implements ZepService {
         ProjektListeType projektListe = readProjekteResponseType.getProjektListe();
         return projektListe.getProjekt().stream()
                 .map(pt -> createProject(pt, monthYear))
-                .collect(Collectors.toList());
+                .toList();
     }
+
+
+    @Override
+    public List<Bill> getBillsForEmployeeByMonth(final Employee employee, YearMonth yearMonth) {
+        String fromDate = getFirstDayOfCurrentMonth(LocalDate.now());
+        String toDate = formatDate(getLastDayOfCurrentMonth(fromDate));
+
+        if(yearMonth != null){
+            fromDate = formatDate(yearMonth.atDay(1));
+            toDate = formatDate(getLastDayOfCurrentMonth(fromDate));
+        }
+
+        final ReadBelegResponseType readBelegResponseType = getBillsInternal(employee, fromDate, toDate);
+
+        BelegListeType billList = readBelegResponseType.getBelegListe();
+        return billList.getBeleg().stream()
+                .map(this::createBill)
+                .toList();
+    }
+
+
 
     @Override
     public Optional<Project> getProjectByName(final String projectName, final LocalDate monthYear) {
@@ -238,6 +300,50 @@ public class ZepSoapServiceImpl implements ZepService {
         return zepSoapPortType.readProjekte(readProjekteRequestType);
     }
 
+    private ReadBelegResponseType getBillsInternal(final Employee employee, final String from, final String to) {
+        LocalDate now = LocalDate.now();
+        LocalDate firstOfPreviousMonth = now.withMonth(now.getMonth().minus(1).getValue()).withDayOfMonth(1);
+        LocalDate midOfCurrentMonth = LocalDate.now().withDayOfMonth(14);
+
+        String dateForSearchCriteriaFrom = "";
+        String dateForSearchCriteriaTo ="";
+
+
+        if(from == null && to == null) {
+            if (now.isAfter(midOfCurrentMonth) && monthlyReportService.isMonthConfirmedFromEmployee(employee, firstOfPreviousMonth)) {
+                dateForSearchCriteriaFrom = getFirstDayOfCurrentMonth(now);
+                dateForSearchCriteriaTo = getLastDayOfCurrentMonth(now);
+            }
+        } else {
+            dateForSearchCriteriaFrom = from;
+            dateForSearchCriteriaTo = to;
+        }
+
+        final ReadBelegSearchCriteriaType readBelegSearchCriteriaType = createBillSearchCriteria(employee, dateForSearchCriteriaFrom, dateForSearchCriteriaTo);
+
+        final ReadBelegRequestType readBelegRequestType = new ReadBelegRequestType();
+        readBelegRequestType.setRequestHeader(zepSoapProvider.createRequestHeaderType());
+        readBelegRequestType.setReadBelegSearchCriteria(readBelegSearchCriteriaType);
+
+        return zepSoapPortType.readBeleg(readBelegRequestType);
+    }
+
+    private ReadBelegAnhangResponseType getAttachmentForBill(int billNumber) {
+        final ReadBelegAnhangSearchCriteriaType readBelegAnhangSearchCriteriaType = createAttachmentSearchCriteria(billNumber);
+
+        final ReadBelegAnhangRequestType readBelegAnhangRequestType = new ReadBelegAnhangRequestType();
+        readBelegAnhangRequestType.setRequestHeader(zepSoapProvider.createRequestHeaderType());
+        readBelegAnhangRequestType.setReadBelegAnhangSearchCriteria(readBelegAnhangSearchCriteriaType);
+
+        return zepSoapPortType.readBelegAnhang(readBelegAnhangRequestType);
+    }
+
+    private ReadBelegAnhangSearchCriteriaType createAttachmentSearchCriteria(int billNumber) {
+        ReadBelegAnhangSearchCriteriaType searchCriteria = new ReadBelegAnhangSearchCriteriaType();
+        searchCriteria.setBelegNr(billNumber);
+        return searchCriteria;
+    }
+
     private ReadProjektzeitenSearchCriteriaType createProjectTimeSearchCriteria(Employee employee, LocalDate date) {
         ReadProjektzeitenSearchCriteriaType searchCriteria = new ReadProjektzeitenSearchCriteriaType();
 
@@ -271,6 +377,52 @@ public class ZepSoapServiceImpl implements ZepService {
 
         searchCriteria.setUserId(employee.getUserId());
         return searchCriteria;
+    }
+
+    private ReadBelegSearchCriteriaType createBillSearchCriteria(Employee employee, String from, String to){
+        ReadBelegSearchCriteriaType searchCriteria = new ReadBelegSearchCriteriaType();
+
+        //setUserIdListe needs this special parameter below, could be more than one id but in this case only one is useful
+        UserIdListeType userIdListe = new UserIdListeType();
+        userIdListe.setUserId(List.of(employee.getUserId()));
+
+        searchCriteria.setUserIdListe(userIdListe);
+        searchCriteria.setVon(from);
+        searchCriteria.setBis(to);
+
+        return searchCriteria;
+    }
+
+    private Bill createBill(final BelegType belegType) {
+        List<BelegbetragType> amountList = belegType.getBelegbetragListe().getBelegbetrag();
+        ReadBelegAnhangResponseType readBelegAnhangResponseType = getAttachmentForBill(belegType.getBelegNr());
+
+        //because it is not possible to store a byte[] in json
+        String attachmentBase64String = null;
+        String attachmentFilename = null;
+
+        if(readBelegAnhangResponseType.getAnhang().getInhalt() != null){
+            byte[] attachmentBase64 = readBelegAnhangResponseType.getAnhang().getInhalt();
+            attachmentBase64String = Base64.encodeBase64String(attachmentBase64);
+            attachmentFilename = readBelegAnhangResponseType.getAnhang().getName();
+        }
+
+        // would be different if there is more than one tax rate on one bill
+        // -> is not our case, if it would be one should consider changing structure of Bill-Object and iterate over all entries of amountList
+        double bruttoValue = 0.0;
+        if(amountList.size() == 1){
+            bruttoValue = amountList.get(0).getBetrag() * amountList.get(0).getMenge();
+        }
+
+        return Bill.builder()
+                .billDate(DateUtils.parseDate(belegType.getDatum()))
+                .bruttoValue(bruttoValue)
+                .billType(belegType.getBelegart())
+                .paymentMethodType(PaymentMethodType.getByName(belegType.getZahlungsart()).orElse(null)) //can actually never be null, because it is required in ZEP -> Optional<...> due to Enum
+                .projectName(belegType.getProjektNr())
+                .attachmentBase64(attachmentBase64String)
+                .attachmentFileName(attachmentFilename)
+                .build();
     }
 
     private Project createProject(final ProjektType projektType, final LocalDate monthYear) {
@@ -326,7 +478,7 @@ public class ZepSoapServiceImpl implements ZepService {
                 .filter(e -> filterActiveEmployees(monthYear, e.getVon(), e.getBis()))
                 .filter(projektMitarbeiterType -> PROJECT_LEAD_RANGE.contains(projektMitarbeiterType.getIstProjektleiter()))
                 .map(ProjektMitarbeiterType::getUserId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<String> createCategories(final ProjektType projektType) {
@@ -335,7 +487,7 @@ public class ZepSoapServiceImpl implements ZepService {
                 .getKategorie()
                 .stream()
                 .map(KategorieType::getKurzform)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -356,6 +508,6 @@ public class ZepSoapServiceImpl implements ZepService {
                 .stream()
                 .flatMap(mitarbeiterListe -> mitarbeiterListe.getMitarbeiter().stream())
                 .map(employeeMapper::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
